--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="logo">Portfolio</div>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
-      <li><a href="#experience">Experience</a></li>
       <li><a href="#research">Research</a></li>
+      <li><a href="#experience">Experience</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -31,8 +31,8 @@
       </button>
       <div class="menu-links" id="menuLinks">
         <a href="#about">About</a>
-        <a href="#experience">Experience</a>
         <a href="#research">Research</a>
+        <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
@@ -120,15 +120,12 @@
     </div>
   </section>
 
-
-  </section>
-
   <hr class="section-divider" />
 
   <!-- ===================== ABOUT ===================== -->
   <section id="about" class="container">
     <p class="section__text__p1">Get To Know More</p>
-   <!-- <h1 class="title">About Me</h1> -->
+    <!-- <h1 class="title">About Me</h1> -->
 
     <!-- Text LEFT, Image RIGHT -->
     <div class="about-layout">
@@ -161,7 +158,6 @@
     <h2 class="academic-heading">Academic Background</h2>
 
     <div class="education-wrapper">
-
       <!-- UW -->
       <div class="edu-box">
         <div class="edu-left">
@@ -195,161 +191,17 @@
           <p class="edu-detail"><strong>CGPA:</strong> 3.49 / 4.00</p>
           <p class="edu-duration">Sept 2017 – Aug 2021</p>
           <div class="edu-btn-row">
-            <!-- Replace with your thesis link when ready -->
             <a class="mini-btn" href="BSC_THESIS_LINK_HERE" target="_blank" rel="noopener">Thesis</a>
             <a class="mini-btn" href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank" rel="noopener">Video</a>
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
   <hr class="section-divider" />
 
-  <!-- ===================== EXPERIENCE ===================== -->
-  <section id="experience" class="container">
-    <p class="section__text__p1">Explore My</p>
-    <h1 class="title">Experience</h1>
-
-    <div class="exp-wrapper">
-
-      <!-- Cobionix -->
-      <div class="exp-box">
-        <div class="exp-left">
-          <a href="https://www.cobionix.com/en/" target="_blank" rel="noopener">
-            <img src="./assets/cobionix.png" class="exp-logo" alt="Cobionix Logo" />
-          </a>
-          <p class="exp-date">Sept 2025 – Present</p>
-          <p class="exp-location">Kitchener, Canada</p>
-        </div>
-        <div class="exp-right">
-          <p class="exp-role">AI & Robotics Software Engineer</p>
-          <p class="exp-company">Cobionix Corporation</p>
-          <ul class="exp-desc">
-            <li>Developing real-time vision pipelines on NVIDIA Jetson Orin using ONNX/TensorRT.</li>
-            <li>Optimizing inference latency and power via quantization, profiling, and deployment tuning.</li>
-            <li>Building device-side monitoring loops to adapt compute/inference rate under runtime load.</li>
-          </ul>
-        </div>
-      </div>
-
-      <hr />
-
-      <!-- Apple -->
-      <div class="exp-box">
-        <div class="exp-left">
-          <a href="https://www.apple.com/" target="_blank" rel="noopener">
-            <img src="./assets/apple.png" class="exp-logo" alt="Apple Logo" />
-          </a>
-          <p class="exp-date">Jan 2024 – Jul 2025</p>
-          <p class="exp-location">Waterloo, Canada</p>
-        </div>
-        <div class="exp-right">
-          <p class="exp-role">Research Assistant — Software Engineering</p>
-          <p class="exp-company">Apple Inc. (Confidential / NDA)</p>
-          <ul class="exp-desc">
-            <li>Optimized embedded Linux data paths in C++/Python and reduced performance bottlenecks.</li>
-            <li>Profiled CPU/memory/I/O and implemented low-level fixes for stable throughput behavior.</li>
-            <li>Analyzed RF/telemetry logs and tuned parameters using Python-driven workflows.</li>
-          </ul>
-        </div>
-      </div>
-
-      <hr />
-
-      <!-- UW RoboHub -->
-      <div class="exp-box">
-        <div class="exp-left">
-          <a href="https://uwaterloo.ca/robohub/" target="_blank" rel="noopener">
-            <img src="./assets/robohub.png" class="exp-logo" alt="UW RoboHub Logo" />
-          </a>
-          <p class="exp-date">Jan 2024 – Sept 2025</p>
-          <p class="exp-location">Waterloo, Canada</p>
-        </div>
-        <div class="exp-right">
-          <p class="exp-role">Autonomy Software Graduate Researcher</p>
-          <p class="exp-company">University of Waterloo — RoboHub</p>
-          <ul class="exp-desc">
-            <li>Developed multi-robot SLAM and volumetric mapping pipelines in ROS2/C++.</li>
-            <li>Integrated 4D mmWave radar with RGB-D sensing for robust perception under occlusions.</li>
-            <li>Optimized TSDF/Octree mapping for real-time performance and deployment stability.</li>
-          </ul>
-        </div>
-      </div>
-
-      <hr />
-
-      <!-- Keysight -->
-      <div class="exp-box">
-        <div class="exp-left">
-          <a href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener">
-            <img src="./assets/keysight.png" class="exp-logo" alt="Keysight Logo" />
-          </a>
-          <p class="exp-date">Sept 2024 – Dec 2024</p>
-          <p class="exp-location">Waterloo, Canada</p>
-        </div>
-        <div class="exp-right">
-          <p class="exp-role">Research Internship — Motion Planning Software</p>
-          <p class="exp-company">Keysight Technologies</p>
-          <ul class="exp-desc">
-            <li>Built OMPL motion planning for 7-DoF Franka Panda and automated scanning trajectories.</li>
-            <li>Benchmarked planners and validated sim-to-real execution with repeatable configurations.</li>
-            <li>Packaged pipelines for reproducibility and CI-ready evaluation.</li>
-          </ul>
-        </div>
-      </div>
-
-      <hr />
-
-      <!-- Rogers -->
-      <div class="exp-box">
-        <div class="exp-left">
-          <a href="https://www.rogers.com/" target="_blank" rel="noopener">
-            <img src="./assets/rogers.png" class="exp-logo" alt="Rogers Logo" />
-          </a>
-          <p class="exp-date">Jan 2024 – Aug 2025</p>
-          <p class="exp-location">Waterloo, Canada</p>
-        </div>
-        <div class="exp-right">
-          <p class="exp-role">Software Engineer — MITACS Research Internship</p>
-          <p class="exp-company">Rogers Communications</p>
-          <ul class="exp-desc">
-            <li>Integrated 5G connectivity with autonomy pipelines on embedded Linux (Jetson).</li>
-            <li>Built Python-based models for network behavior and telemetry-driven tuning.</li>
-            <li>Containerized ROS2 services for reproducible, real-time offload experiments.</li>
-          </ul>
-        </div>
-      </div>
-
-      <hr />
-
-      <!-- Abyss -->
-      <div class="exp-box">
-        <div class="exp-left">
-          <a href="https://abysssolutions.co/" target="_blank" rel="noopener">
-            <img src="./assets/abyss.png" class="exp-logo" alt="Abyss Logo" />
-          </a>
-          <p class="exp-date">May 2022 – Dec 2023</p>
-          <p class="exp-location">Islamabad + Australia</p>
-        </div>
-        <div class="exp-right">
-          <p class="exp-role">Asset Integrity Engineer II — Software</p>
-          <p class="exp-company">Abyss Solutions Inc.</p>
-          <ul class="exp-desc">
-            <li>Developed sonar/camera inspection workflows and CV data processing pipelines.</li>
-            <li>Optimized large batch processing under runtime and memory constraints.</li>
-            <li>Supported field deployments and high-volume inspection reporting workflows.</li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <hr class="section-divider" />
-
-  <!-- ===================== RESEARCH ===================== -->
+  <!-- ===================== RESEARCH (MOVED AFTER ABOUT) ===================== -->
   <section id="research" class="container">
     <p class="section__text__p1">Browse My</p>
     <h1 class="title">Research</h1>
@@ -371,7 +223,6 @@
     </div>
 
     <div class="research-wrapper">
-
       <!-- 1: CRADMap -->
       <div class="research-box" data-tags="robotics ai">
         <div class="research-media">
@@ -507,7 +358,146 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
 
+  <hr class="section-divider" />
+
+  <!-- ===================== EXPERIENCE ===================== -->
+  <section id="experience" class="container">
+    <p class="section__text__p1">Explore My</p>
+    <h1 class="title">Experience</h1>
+
+    <div class="exp-wrapper">
+      <!-- Cobionix -->
+      <div class="exp-box">
+        <div class="exp-left">
+          <a href="https://www.cobionix.com/en/" target="_blank" rel="noopener">
+            <img src="./assets/cobionix.png" class="exp-logo" alt="Cobionix Logo" />
+          </a>
+          <p class="exp-date">Sept 2025 – Present</p>
+          <p class="exp-location">Kitchener, Canada</p>
+        </div>
+        <div class="exp-right">
+          <p class="exp-role">AI & Robotics Software Engineer</p>
+          <p class="exp-company">Cobionix Corporation</p>
+          <ul class="exp-desc">
+            <li>Developing real-time vision pipelines on NVIDIA Jetson Orin using ONNX/TensorRT.</li>
+            <li>Optimizing inference latency and power via quantization, profiling, and deployment tuning.</li>
+            <li>Building device-side monitoring loops to adapt compute/inference rate under runtime load.</li>
+          </ul>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- Apple -->
+      <div class="exp-box">
+        <div class="exp-left">
+          <a href="https://www.apple.com/" target="_blank" rel="noopener">
+            <img src="./assets/apple.png" class="exp-logo" alt="Apple Logo" />
+          </a>
+          <p class="exp-date">Jan 2024 – Jul 2025</p>
+          <p class="exp-location">Waterloo, Canada</p>
+        </div>
+        <div class="exp-right">
+          <p class="exp-role">Research Assistant — Software Engineering</p>
+          <p class="exp-company">Apple Inc. (Confidential / NDA)</p>
+          <ul class="exp-desc">
+            <li>Optimized embedded Linux data paths in C++/Python and reduced performance bottlenecks.</li>
+            <li>Profiled CPU/memory/I/O and implemented low-level fixes for stable throughput behavior.</li>
+            <li>Analyzed RF/telemetry logs and tuned parameters using Python-driven workflows.</li>
+          </ul>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- UW RoboHub -->
+      <div class="exp-box">
+        <div class="exp-left">
+          <a href="https://uwaterloo.ca/robohub/" target="_blank" rel="noopener">
+            <img src="./assets/robohub.png" class="exp-logo" alt="UW RoboHub Logo" />
+          </a>
+          <p class="exp-date">Jan 2024 – Sept 2025</p>
+          <p class="exp-location">Waterloo, Canada</p>
+        </div>
+        <div class="exp-right">
+          <p class="exp-role">Autonomy Software Graduate Researcher</p>
+          <p class="exp-company">University of Waterloo — RoboHub</p>
+          <ul class="exp-desc">
+            <li>Developed multi-robot SLAM and volumetric mapping pipelines in ROS2/C++.</li>
+            <li>Integrated 4D mmWave radar with RGB-D sensing for robust perception under occlusions.</li>
+            <li>Optimized TSDF/Octree mapping for real-time performance and deployment stability.</li>
+          </ul>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- Keysight -->
+      <div class="exp-box">
+        <div class="exp-left">
+          <a href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener">
+            <img src="./assets/keysight.png" class="exp-logo" alt="Keysight Logo" />
+          </a>
+          <p class="exp-date">Sept 2024 – Dec 2024</p>
+          <p class="exp-location">Waterloo, Canada</p>
+        </div>
+        <div class="exp-right">
+          <p class="exp-role">Research Internship — Motion Planning Software</p>
+          <p class="exp-company">Keysight Technologies</p>
+          <ul class="exp-desc">
+            <li>Built OMPL motion planning for 7-DoF Franka Panda and automated scanning trajectories.</li>
+            <li>Benchmarked planners and validated sim-to-real execution with repeatable configurations.</li>
+            <li>Packaged pipelines for reproducibility and CI-ready evaluation.</li>
+          </ul>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- Rogers -->
+      <div class="exp-box">
+        <div class="exp-left">
+          <a href="https://www.rogers.com/" target="_blank" rel="noopener">
+            <img src="./assets/rogers.png" class="exp-logo" alt="Rogers Logo" />
+          </a>
+          <p class="exp-date">Jan 2024 – Aug 2025</p>
+          <p class="exp-location">Waterloo, Canada</p>
+        </div>
+        <div class="exp-right">
+          <p class="exp-role">Software Engineer — MITACS Research Internship</p>
+          <p class="exp-company">Rogers Communications</p>
+          <ul class="exp-desc">
+            <li>Integrated 5G connectivity with autonomy pipelines on embedded Linux (Jetson).</li>
+            <li>Built Python-based models for network behavior and telemetry-driven tuning.</li>
+            <li>Containerized ROS2 services for reproducible, real-time offload experiments.</li>
+          </ul>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- Abyss -->
+      <div class="exp-box">
+        <div class="exp-left">
+          <a href="https://abysssolutions.co/" target="_blank" rel="noopener">
+            <img src="./assets/abyss.png" class="exp-logo" alt="Abyss Logo" />
+          </a>
+          <p class="exp-date">May 2022 – Dec 2023</p>
+          <p class="exp-location">Islamabad + Australia</p>
+        </div>
+        <div class="exp-right">
+          <p class="exp-role">Asset Integrity Engineer II — Software</p>
+          <p class="exp-company">Abyss Solutions Inc.</p>
+          <ul class="exp-desc">
+            <li>Developed sonar/camera inspection workflows and CV data processing pipelines.</li>
+            <li>Optimized large batch processing under runtime and memory constraints.</li>
+            <li>Supported field deployments and high-volume inspection reporting workflows.</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
 
