--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maaz| ProRobo</title>
+  <title>Maaz | ProRobo</title>
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
@@ -123,83 +123,83 @@
   <hr class="section-divider" />
 
   <!-- ===================== ABOUT ===================== -->
-  <section id="about" class="container">
-    <p class="section__text__p1">Get To Know More</p>
-    <!-- <h1 class="title">About Me</h1> -->
+    <section id="about" class="container">
+  <p class="section__text__p1">Get To Know More</p>
+  <!-- <h1 class="title">About Me</h1> -->
 
-    <!-- Text LEFT, Image RIGHT -->
-    <div class="about-layout">
-      <div class="about-text">
-        <p class="justify">
-          I build intelligent software that combine perception, autonomy, and AI/ML software engineering.
-          My work spans multi-robot SLAM and volumetric mapping, manipulation: motion planning,
-          mmWave 4D radar + RGB-D perception, connected robotics over 5G, and computational intelligence: reinforcenment learning (RL & IL).
-        </p>
+  <!-- Text LEFT, Image RIGHT -->
+  <div class="about-layout">
+    <div class="about-text">
+      <p class="justify">
+        I build intelligent software that combine perception, autonomy, and AI/ML software engineering.
+        My work spans multi-robot SLAM and volumetric mapping, manipulation: motion planning,
+        mmWave 4D radar + RGB-D perception, connected robotics over 5G, and computational intelligence: reinforcenment learning (RL & IL).
+      </p>
 
-        <p class="justify">
-          During my M.A.Sc. at the University of Waterloo, I worked with
-          <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek" target="_blank" rel="noopener">Dr. William Melek</a>
-          and
-          <a href="https://uwaterloo.ca/electrical-computer-engineering/profile/gshaker" target="_blank" rel="noopener">Dr. George Shaker</a>,
-          collaborating with Apple, UW RoboHub, Keysight, and Rogers on connected robotics systems.
-        </p>
+      <p class="justify">
+        During my M.A.Sc. at the University of Waterloo, I worked with
+        <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek" target="_blank" rel="noopener">Dr. William Melek</a>
+        and
+        <a href="https://uwaterloo.ca/electrical-computer-engineering/profile/gshaker" target="_blank" rel="noopener">Dr. George Shaker</a>,
+        collaborating with Apple, UW RoboHub, Keysight, and Rogers on connected robotics systems.
+      </p>
 
-        <p class="justify">
-          Earlier in my life, I developed strong interest for swarm robotics and ending up developing novel software-hardware autonomy and won 3rd best engineering project in b.sc. Later, I supervised the NUST University team in iMech United Kigndom 2022 cometition for developing hexacopter for locust swarm autonomy mission.
-        </p>
-      </div>
+      <p class="justify">
+        Earlier in my life, I developed strong interest for swarm robotics and ending up developing novel software-hardware autonomy and won 3rd best engineering project in b.sc. Later, I supervised the NUST University team in iMech United Kigndom 2022 cometition for developing hexacopter for locust swarm autonomy mission.
+      </p>
 
-      <div class="about-image">
-        <img src="./assets/about-pic.jpg" class="about-pic" alt="About Maaz" />
-      </div>
-    </div>
+      <!-- ✅ ACADEMIC BACKGROUND MOVED HERE (below 3rd paragraph) -->
+      <h2 class="academic-heading">Academic Background</h2>
 
-    <!-- ===================== ACADEMIC BACKGROUND ===================== -->
-    <h2 class="academic-heading">Academic Background</h2>
-
-    <div class="education-wrapper">
-      <!-- UW -->
-      <div class="edu-box">
-        <div class="edu-left">
-          <img src="./assets/uwaterloo.jpeg" class="edu-logo" alt="University of Waterloo Logo" />
+      <div class="education-wrapper">
+        <!-- UW -->
+        <div class="edu-box">
+          <div class="edu-left">
+            <img src="./assets/uwaterloo.jpeg" class="edu-logo" alt="University of Waterloo Logo" />
+          </div>
+          <div class="edu-right">
+            <h3 class="edu-title">University of Waterloo, Canada</h3>
+            <p class="edu-degree">Masters of Applied Sciences (M.A.Sc), Mechatronics Engineering</p>
+            <p class="edu-detail"><strong>Thesis:</strong> Intelligent Multi-Robot Autonomy with Connected AMRs and Manipulators for SMART Factory(s)</p>
+            <p class="edu-detail"><strong>CGPA:</strong> 93.5% (A+)</p>
+            <p class="edu-duration">Jan 2024 – Aug 2025</p>
+            <div class="edu-btn-row">
+              <a class="mini-btn" href="https://uwspace.uwaterloo.ca/items/17af2309-7924-47ad-802d-10f313d2a378" target="_blank" rel="noopener">Thesis</a>
+              <a class="mini-btn" href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" rel="noopener">Video 1</a>
+              <a class="mini-btn" href="https://www.youtube.com/watch?v=fgeb6k_P9mg" target="_blank" rel="noopener">Video 2</a>
+            </div>
+          </div>
         </div>
-        <div class="edu-right">
-          <h3 class="edu-title">University of Waterloo, Canada</h3>
-          <p class="edu-degree">Masters of Applied Sciences (M.A.Sc), Mechatronics Engineering</p>
-          <p class="edu-detail"><strong>Thesis:</strong> Intelligent Multi-Robot Autonomy with Connected AMRs and Manipulators for SMART Factory(s)</p>
-          <p class="edu-detail"><strong>CGPA:</strong> 93.5% (A+)</p>
-          <p class="edu-duration">Jan 2024 – Aug 2025</p>
-          <div class="edu-btn-row">
-            <a class="mini-btn" href="https://uwspace.uwaterloo.ca/items/17af2309-7924-47ad-802d-10f313d2a378" target="_blank" rel="noopener">Thesis</a>
-            <a class="mini-btn" href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" rel="noopener">Video 1</a>
-            <a class="mini-btn" href="https://www.youtube.com/watch?v=fgeb6k_P9mg" target="_blank" rel="noopener">Video 2</a>
+
+        <hr class="edu-divider" />
+
+        <!-- Bahria -->
+        <div class="edu-box">
+          <div class="edu-left">
+            <img src="./assets/bahria_university.jpeg" class="edu-logo" alt="Bahria University Logo" />
+          </div>
+          <div class="edu-right">
+            <h3 class="edu-title">Bahria University</h3>
+            <p class="edu-degree">Bachelors of Sciences (B.Sc), Electrical Engineering</p>
+            <p class="edu-detail"><strong>Thesis:</strong> Swarm Robotics: Centralized Multi-Robot Autonomy for Path Planning and Patterns</p>
+            <p class="edu-detail"><strong>CGPA:</strong> 3.49 / 4.00</p>
+            <p class="edu-duration">Sept 2017 – Aug 2021</p>
+            <div class="edu-btn-row">
+              <a class="mini-btn" href="BSC_THESIS_LINK_HERE" target="_blank" rel="noopener">Thesis</a>
+              <a class="mini-btn" href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank" rel="noopener">Video</a>
+            </div>
           </div>
         </div>
       </div>
-
-      <hr class="edu-divider" />
-
-      <!-- Bahria -->
-      <div class="edu-box">
-        <div class="edu-left">
-          <img src="./assets/bahria_university.jpeg" class="edu-logo" alt="Bahria University Logo" />
-        </div>
-        <div class="edu-right">
-          <h3 class="edu-title">Bahria University</h3>
-          <p class="edu-degree">Bachelors of Sciences (B.Sc), Electrical Engineering</p>
-          <p class="edu-detail"><strong>Thesis:</strong> Swarm Robotics: Centralized Multi-Robot Autonomy for Path Planning and Patterns</p>
-          <p class="edu-detail"><strong>CGPA:</strong> 3.49 / 4.00</p>
-          <p class="edu-duration">Sept 2017 – Aug 2021</p>
-          <div class="edu-btn-row">
-            <a class="mini-btn" href="BSC_THESIS_LINK_HERE" target="_blank" rel="noopener">Thesis</a>
-            <a class="mini-btn" href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank" rel="noopener">Video</a>
-          </div>
-        </div>
-      </div>
+      <!-- ✅ END ACADEMIC BACKGROUND -->
     </div>
-  </section>
 
-  <hr class="section-divider" />
+    <div class="about-image">
+      <img src="./assets/about-pic.jpg" class="about-pic" alt="About Maaz" />
+    </div>
+  </div>
+</section>
+
 
   <!-- ===================== RESEARCH (MOVED AFTER ABOUT) ===================== -->
   <section id="research" class="container">
