--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
         <div class="edu-box">
           <div class="edu-left">
             <img src="./assets/uwaterloo.jpeg" class="edu-logo" alt="University of Waterloo Logo" />
+            <p class="edu-duration edu-duration-left">Jan 2024 – Aug 2025</p>
           </div>
           <div class="edu-right">
             <h3 class="edu-title">University of Waterloo, Canada</h3>
             <p class="edu-degree">Masters of Applied Sciences (M.A.Sc), Mechatronics Engineering</p>
             <p class="edu-detail"><strong>Thesis:</strong> Intelligent Multi-Robot Autonomy with Connected AMRs and Manipulators for SMART Factory(s)</p>
             <p class="edu-detail"><strong>CGPA:</strong> 93.5% (A+)</p>
-            <p class="edu-duration">Jan 2024 – Aug 2025</p>
             <div class="edu-btn-row">
               <a class="mini-btn" href="https://uwspace.uwaterloo.ca/items/17af2309-7924-47ad-802d-10f313d2a378" target="_blank" rel="noopener">Thesis</a>
               <a class="mini-btn" href="https://www.youtube.com/watch?v=eTLxCY2rRMA" target="_blank" rel="noopener">Video 1</a>
@@ -178,13 +178,14 @@
         <div class="edu-box">
           <div class="edu-left">
             <img src="./assets/bahria_university.jpeg" class="edu-logo" alt="Bahria University Logo" />
+            <p class="edu-duration">Sept 2017 – Aug 2021</p>
+
           </div>
           <div class="edu-right">
             <h3 class="edu-title">Bahria University</h3>
             <p class="edu-degree">Bachelors of Sciences (B.Sc), Electrical Engineering</p>
             <p class="edu-detail"><strong>Thesis:</strong> Swarm Robotics: Centralized Multi-Robot Autonomy for Path Planning and Patterns</p>
             <p class="edu-detail"><strong>CGPA:</strong> 3.49 / 4.00</p>
-            <p class="edu-duration">Sept 2017 – Aug 2021</p>
             <div class="edu-btn-row">
               <a class="mini-btn" href="BSC_THESIS_LINK_HERE" target="_blank" rel="noopener">Thesis</a>
               <a class="mini-btn" href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank" rel="noopener">Video</a>
