--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   </div>
 </section>
 
-
+<hr class="section-divider" />
   <!-- ===================== RESEARCH (MOVED AFTER ABOUT) ===================== -->
   <section id="research" class="container">
     <p class="section__text__p1">Browse My</p>
