--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="hero-right">
         <p class="section__text__p1">Hi, this is</p>
         <h1 class="title">Maaz Qureshi</h1>
-        <p class="section__text__p2">Robotics Software Research Engineer (AI/ML, Perception & Autonomy)</p>
+        <p class="section__text__p2">Software Research Engineer (5G, AI/ML, Perception & Autonomy)</p>
 
         <!-- ===================== HERO TREE (CLICKABLE) ===================== -->
         <div class="logo-tree" aria-label="Career and education tree">
@@ -135,7 +135,7 @@
       <p class="justify">
         I build intelligent software that combine perception, autonomy, and AI/ML software engineering.
         My work spans multi-robot SLAM and volumetric mapping, manipulation: motion planning,
-        mmWave 4D radar + RGB-D perception, connected robotics over 5G, and computational intelligence: reinforcenment learning (RL & IL).
+        mmWave 4D radar + RGB-D perception, connected robotics over 5G mmWave wireless communication, and computational intelligence: reinforcenment learning (RL & IL).
       </p>
 
       <p class="justify">
@@ -409,7 +409,7 @@
           <ul class="exp-desc">
             <li>Optimized embedded Linux data paths in C++/Python and reduced performance bottlenecks.</li>
             <li>Profiled CPU/memory/I/O and implemented low-level fixes for stable throughput behavior.</li>
-            <li>Analyzed RF/telemetry logs and tuned parameters using Python-driven workflows.</li>
+            <li>Analyzed RF/telemetry Wifi (wireless communication) logs and tuned parameters.</li>
           </ul>
         </div>
       </div>
