--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <a class="tree-node node-apple" href="https://www.apple.com/" target="_blank" rel="noopener">
             <img src="./assets/apple.png" alt="Apple" loading="lazy" />
-            <span>2024–2025</span>
+            <span>2025</span>
           </a>
 
           <a class="tree-node node-keysight" href="https://www.keysight.com/us/en/home.html" target="_blank" rel="noopener">
