--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </p>
 
       <p class="justify">
-        Earlier in my life, I developed strong interest for swarm robotics and ending up developing novel software-hardware autonomy and won 3rd best engineering project in b.sc. Later, I supervised the NUST University team in iMech United Kigndom 2022 cometition for developing hexacopter for locust swarm autonomy mission.
+        Earlier in my life, I developed strong interest for swarm robotics and ending up developing novel software-hardware autonomy and won 3rd best engineering project in b.sc. Later, I supervised the NUST University team in iMech United Kingdom 2022 cometition for developing hexacopter for locust swarm autonomy mission.
       </p>
 
       <!-- ✅ ACADEMIC BACKGROUND MOVED HERE (below 3rd paragraph) -->
