--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" class="icon contact-icon email-icon" alt="Email icon" />
-        <p><a href="mailto:maazqureshi919@gmail.com">maazqureshi919@gmail.com</a></p>
+        <p><a href="mailto:maazqureshi919@gmail.com">m23qures@uwaterloo.ca</a></p>
       </div>
       <div class="contact-info-container">
         <img src="./assets/linkedin.png" class="icon contact-icon" alt="LinkedIn icon" />
