updating the title in the exp sec

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           <p class="exp-location">Waterloo, Canada</p>
         </div>
         <div class="exp-right">
-          <p class="exp-role">Autonomy Software Graduate Researcher</p>
+          <p class="exp-role">Graduate Research Student: AI/ML & Robotics</p>
           <p class="exp-company">University of Waterloo — RoboHub</p>
           <ul class="exp-desc">
             <li>Developed multi-robot SLAM and volumetric mapping pipelines in ROS2/C++.</li>
@@ -448,7 +448,7 @@
           <p class="exp-location">Waterloo, Canada</p>
         </div>
         <div class="exp-right">
-          <p class="exp-role">Research Internship — Motion Planning Software</p>
+          <p class="exp-role">Research Assistant — Robotics Software</p>
           <p class="exp-company">Keysight Technologies</p>
           <ul class="exp-desc">
             <li>Built OMPL motion planning for 7-DoF Franka Panda and automated scanning trajectories.</li>
