updating the title in the exp sec

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           <p class="exp-location">Kitchener, Canada</p>
         </div>
         <div class="exp-right">
-          <p class="exp-role">AI & Robotics Software Engineer</p>
+          <p class="exp-role">Robotics Software Engineer: AI/ML</p>
           <p class="exp-company">Cobionix Corporation</p>
           <ul class="exp-desc">
             <li>Developing real-time vision pipelines on NVIDIA Jetson Orin using ONNX/TensorRT.</li>
