--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h3 class="edu-title">Bahria University</h3>
             <p class="edu-degree">Bachelors of Sciences (B.Sc), Electrical Engineering</p>
             <p class="edu-detail"><strong>Thesis:</strong> Swarm Robotics: Centralized Multi-Robot Autonomy for Path Planning and Patterns</p>
-            <p class="edu-detail"><strong>CGPA:</strong> 3.49 / 4.00</p>
+            <p class="edu-detail"><strong>CGPA:</strong> A+</p>
             <div class="edu-btn-row">
               <a class="mini-btn" href="BSC_THESIS_LINK_HERE" target="_blank" rel="noopener">Thesis</a>
               <a class="mini-btn" href="https://www.youtube.com/watch?v=2UYPGOTPboM" target="_blank" rel="noopener">Video</a>
