updating the title in the exp sec

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
           <p class="exp-location">Waterloo, Canada</p>
         </div>
         <div class="exp-right">
-          <p class="exp-role">Software Engineer — MITACS Research Internship</p>
+          <p class="exp-role">Connected Robotics Research Student | MITACS Research Internship</p>
           <p class="exp-company">Rogers Communications</p>
           <ul class="exp-desc">
             <li>Integrated 5G connectivity with autonomy pipelines on embedded Linux (Jetson).</li>
