--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="hero-right">
         <p class="section__text__p1">Hi, this is</p>
         <h1 class="title">Maaz Qureshi</h1>
-        <p class="section__text__p2">Software Research Engineer (5G, AI/ML, Robotics Perception & Autonomy)</p>
+        <p class="section__text__p2">Software Engineer (AI/ML, Computer Vision & Graphics, Robotics Perception)</p>
 
         <!-- ===================== HERO TREE (CLICKABLE) ===================== -->
         <div class="logo-tree" aria-label="Career and education tree">
